Fix expand-div alignment and grid area

--- a/style.css
+++ b/style.css
@@ -257,12 +257,13 @@ body {
 }
 
 .expand-div {
-	grid-row-start: 5;
+	grid-area: 5 / 1 / 6 / 3;
 }
 
 .expand-button {
 	border: none;
 	font-size: 14px;
+	display: grid;
 }
 
 .on {
